Added grain geom tools as dependency. Added minimum lib versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,2 @@
 [build-system]
-requires = ["Cython", "numpy", "scipy", "setuptools", "wheel"]
+requires = ["Cython>=0.29", "numpy", "scipy", "setuptools", "wheel"]
