Updated numpy and numba deps versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,8 @@ script = "build.py"
 [tool.poetry.dependencies]
 cython = ">=0.29.26"
 python = ">=3.8,<3.10"
-numpy = "<1.22"
-numba = ">=0.52"
+numpy = "^1.21"
+numba = ">=0.55.2"
 scipy = ">=1.7"
 descartes = ">=1.0"
 pathlib = ">=1.0"
