--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ readme = "README.md"
 
 
 packages = [
-    {include = "mmt_dipole_inverse"}
+    {include = "mmt_dipole_inverse"},
+    {include = "mmt_dipole_inverse_config.py"},
 ]
 
 include = [
@@ -41,6 +42,8 @@ shapely = ">=1.7"
 # grain-geometry-tools = { git = "ssh://git@github.com/Micromagnetic-Tomography/grain_geometry_tools.git", branch = "master" }
 
 [tool.poetry.dev-dependencies]
+pytest = ">=7.0.0"
+jupyterlab = ">=3.4.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "cython", "setuptools"]
