--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ shapely = ">=1.7"
 [tool.poetry.dev-dependencies]
 pytest = ">=7.0.0"
 jupyterlab = ">=3.4.5"
+jupytext = ">=1.14.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "cython", "setuptools"]
