--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,5 +47,5 @@ jupyterlab = ">=3.4.5"
 jupytext = ">=1.14.1"
 
 [build-system]
-requires = ["poetry-core>=1.0.0", "cython", "setuptools"]
+requires = ["poetry-core>=1.0.0", "cython", "numpy", "setuptools"]
 build-backend = "poetry.core.masonry.api"
