--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ script = "build.py"
 [tool.poetry.dependencies]
 cython = ">=0.29.26"
 python = ">=3.8,<3.10"
-numpy = "^1.21"
+numpy = ">=1.21,<1.23"
 numba = ">=0.55.2"
 scipy = ">=1.7"
 descartes = ">=1.0"
