Renamed library in tests, README and docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 # See: https://github.com/python-poetry/poetry/issues/2740
 # for the current status of the build.py file in Poetry
 [tool.poetry]
-name = "mmt_dipole_inverse"
+name = "mmt_dipole_cuboid_inversion"
 version = "2.0a"
-description = "Python lib to calculate dipole magnetization"
+description = "Python lib to calculate the magnetization of grains using the dipole cuboids model"
 authors = ["F. Out <f.out@students.uu.nl>", "D. Cortés-Ortuño", "M. Kosters", "K. Fabian", "L. V. de Groot"]
 license = "MIT"
 readme = "README.md"
@@ -11,16 +11,16 @@ readme = "README.md"
 
 
 packages = [
-    {include = "mmt_dipole_inverse"},
-    {include = "mmt_dipole_inverse_config.py"},
+    {include = "mmt_dipole_cuboid_inversion"},
+    {include = "mmt_dipole_cuboid_inversion_config.py"},
 ]
 
 include = [
     # C/CUDA extensions must be included in the wheel distributions
-    {path = "mmt_dipole_inverse/cython_lib/*.so", format = "wheel"},
-    {path = "mmt_dipole_inverse/cython_lib/*.pyd", format = "wheel"},
-    {path = "mmt_dipole_inverse/cython_cuda_lib/*.so", format = "wheel"},
-    {path = "mmt_dipole_inverse/cython_cuda_lib/*.pyd", format = "wheel"},
+    {path = "mmt_dipole_cuboid_inversion/cython_lib/*.so", format = "wheel"},
+    {path = "mmt_dipole_cuboid_inversion/cython_lib/*.pyd", format = "wheel"},
+    {path = "mmt_dipole_cuboid_inversion/cython_cuda_lib/*.so", format = "wheel"},
+    {path = "mmt_dipole_cuboid_inversion/cython_cuda_lib/*.pyd", format = "wheel"},
 ]
 
 [tool.poetry.build]
