--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,12 @@
 # for the current status of the build.py file in Poetry
 [tool.poetry]
 name = "mmt_dipole_cuboid_inversion"
-version = "2.0a"
+version = "1.0"
 description = "Python lib to calculate the magnetization of grains using the dipole cuboids model"
 authors = ["F. Out <f.out@students.uu.nl>", "D. Cortés-Ortuño", "M. Kosters", "K. Fabian", "L. V. de Groot"]
 license = "MIT"
 readme = "README.md"
-# build = "build.py"
+# build = "build_extension.py"
 
 
 packages = [
