--- a/.github/workflows/manual-build-and-publish.yml
+++ b/.github/workflows/manual-build-and-publish.yml
@@ -54,8 +54,9 @@ jobs:
         python-version: ['3.10']
         poetry-version: [1.1.14]
         os: [ubuntu-latest]
-
     runs-on: ${{ matrix.os }}
+    permissions:
+      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
 
     steps:
     - name: Download all build objects (artifacts)
@@ -69,8 +70,9 @@ jobs:
         mv poetry-dist-objects-windows-latest/*.whl dist/
         mv poetry-dist-objects-ubuntu-latest/* dist/
 
-    - name: Publish package to PyPI
+    - name: Publish package to Test PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        repository-url: https://test.pypi.org/legacy/
