--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -34,4 +34,4 @@ jobs:
 
     - name: Run tests
       run: |
-        cd tests && python -m poetry run pytest .
+        cd test && python -m poetry run pytest .
