--- a/.github/workflows/manual-build-and-publish.yml
+++ b/.github/workflows/manual-build-and-publish.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         python-version: ['3.8', '3.9', '3.10']
         poetry-version: [1.4.0]
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
 
@@ -66,7 +66,6 @@ jobs:
       run: |
         ls -R
         mkdir dist
-        mv poetry-dist-objects-macos-latest/*.whl dist/
         mv poetry-dist-objects-windows-latest/*.whl dist/
         mv poetry-dist-objects-ubuntu-latest/* dist/
 
