--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
@@ -34,4 +34,6 @@ jobs:
 
     - name: Run tests
       run: |
-        cd test && python -m poetry run pytest .
+        cd test
+        python generate_single_dipole.py 
+        python -m poetry run pytest .
