--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -35,5 +35,5 @@ jobs:
     - name: Run tests
       run: |
         cd test
-        python generate_single_dipole.py 
+        python -m poetry run python generate_single_dipole.py 
         python -m poetry run pytest .
